<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/morado_220"
        android:gravity="center|right"
        android:text="@string/resultado"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOperaciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|right"
        android:text="@string/operaciones"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultado" />

    <Button
        android:id="@+id/btnResetear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/fondo_boton_ac"
        android:fontFamily="sans-serif-black"
        android:text="@string/Resetear"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOperaciones"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnPorcentaje"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_botones_signos"
        android:fontFamily="sans-serif-black"
        android:text="@string/porcentaje"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnResetear"
        app:layout_constraintTop_toTopOf="@+id/btnResetear"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnOpuesto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_botones_signos"
        android:fontFamily="sans-serif-black"
        android:text="@string/opuesto"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnPorcentaje"
        app:layout_constraintTop_toTopOf="@+id/btnPorcentaje"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_botones_signos"
        android:fontFamily="sans-serif-black"
        android:text="@string/dividir"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/btnOpuesto"
        app:layout_constraintTop_toTopOf="@+id/btnOpuesto"
        app:layout_constraintWidth_percent="0.23"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/siete"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetear"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ocho"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnSiete"
        app:layout_constraintTop_toBottomOf="@+id/btnResetear"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/nueve"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnOcho"
        app:layout_constraintTop_toTopOf="@+id/btnOcho"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_botones_signos"
        android:fontFamily="sans-serif-black"
        android:text="@string/multiplicar"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnNueve"
        app:layout_constraintTop_toTopOf="@+id/btnNueve"
        app:layout_constraintWidth_percent="0.23"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/cuatro"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSiete"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/cinco"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnCuatro"
        app:layout_constraintTop_toTopOf="@+id/btnCuatro"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/seis"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnCinco"
        app:layout_constraintTop_toTopOf="@+id/btnCinco"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_botones_signos"
        android:fontFamily="sans-serif-black"
        android:text="@string/restar"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnSeis"
        app:layout_constraintTop_toTopOf="@+id/btnSeis"
        app:layout_constraintWidth_percent="0.23"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/uno"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCuatro"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dos"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnUno"
        app:layout_constraintTop_toTopOf="@+id/btnUno"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tres"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnDos"
        app:layout_constraintTop_toTopOf="@+id/btnDos"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_botones_signos"
        android:fontFamily="sans-serif-black"
        android:text="@string/suma"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnTres"
        app:layout_constraintTop_toTopOf="@+id/btnTres"
        app:layout_constraintWidth_percent="0.23"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/cero"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUno"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/punto"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnCero"
        app:layout_constraintTop_toTopOf="@+id/btnCero"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="TextContrastCheck" />

    <ImageButton

        android:id="@+id/btnBorrar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_boton"
        android:contentDescription="@string/borrar"
        android:src="@drawable/ic_baseline_backspace_24"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnPunto"
        app:layout_constraintTop_toTopOf="@+id/btnPunto"
        app:layout_constraintWidth_percent="0.24"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/fondo_boton_igual"
        android:fontFamily="sans-serif-black"
        android:text="@string/igual"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnBorrar"
        app:layout_constraintTop_toTopOf="@+id/btnBorrar"
        app:layout_constraintWidth_percent="0.23"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>